--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-phone-number-input": "^3.4.12",
+    "react-quill-new": "^3.6.0",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
