--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "aos": "^2.3.4",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.22",
