--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.12",
     "react-quill-new": "^3.6.0",
+    "react-select": "^5.10.2",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
