--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.12",
